kanc/src/tests/sample_code/should_succeed/multi_file/no_warnings/stdlib/src/list.k
pub type List(T: Type) {
    .nil(T: Type): List(T),
    .cons(T: Type, car: T, cdr: List(T)): List(T),
}
