kanc/src/tests/sample_code/should_fail/multi_file/bind/type_priv/src/mod.k
mod nat;

type NatList {
    .nil: NatList,
    .cons(car: nat.Nat, cdr: NatList): NatList,
}
